--- a/main.html
+++ b/main.html
@@ -7,9 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<ol>
+		Shopping List
+		<li>pant</li>
+		<li>shirt</li>
+		<li>trouser</li>
+	</ol>
+	<ul>Holiday List</ul>
+	<li>Kerala</li>
+	<li>Kashmir</li>
+	<li>Ladakh</li>
+	
 
 </body>
 
