--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
 	<ol>
-		Shopping List
+		shoppingList
 		<li>pant</li>
 		<li>shirt</li>
 		<li>trouser</li>
 	</ol>
-	<ul>Holiday List</ul>
+	<ul>holidayList</ul>
 	<li>Kerala</li>
 	<li>Kashmir</li>
 	<li>Ladakh</li>
