--- a/main.html
+++ b/main.html
@@ -9,15 +9,14 @@
 <body>
 	<ol>
 		shoppingList
-		<li>pant</li>
-		<li>shirt</li>
-		<li>trouser</li>
+		<li data-ns-test="pant">pant</li>
+		<li data-ns-test="shirt">shirt</li>
+		<li data-ns-test="trouser">trouser</li>
 	</ol>
 	<ul>holidayList</ul>
-	<li>Kerala</li>
-	<li>Kashmir</li>
-	<li>Ladakh</li>
-	
+	<li data-ns-test="Kerala">Kerala</li>
+	<li data-ns-test="Kashmir">Kashmir</li>
+	<li data-ns-test="Ladakh">Ladakh</li>
 
 </body>
 
