--- a/main.html
+++ b/main.html
@@ -8,15 +8,17 @@
 
 <body>
 	<ol>
-		shoppingList
-		<li data-ns-test="pant">pant</li>
-		<li data-ns-test="shirt">shirt</li>
-		<li data-ns-test="trouser">trouser</li>
+		
+		<li data-ns-test="shoppingList">pant</li>
+		<li data-ns-test="shoppingList">shirt</li>
+		<li data-ns-test="shoppingList">trouser</li>
 	</ol>
-	<ul>holidayList</ul>
-	<li data-ns-test="Kerala">Kerala</li>
-	<li data-ns-test="Kashmir">Kashmir</li>
-	<li data-ns-test="Ladakh">Ladakh</li>
+	<ul>
+	<li data-ns-test="holidayList">Kerala</li>
+	<li data-ns-test="holidayList">Kashmir</li>
+	<li data-ns-test="holidayList">Ladakh</li>
+		</ul>
+		
 
 </body>
 
